--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
       - AWS_SECRET_ACCESS_KEY
       - AWS_PINPOINT_ID
       - AWS_PINPOINT_REGION
+      - AWS_PINPOINT_EMAIL
 networks:
   mydockernet:
     driver: bridge
