--- a/nginx/src/nginx.conf
+++ b/nginx/src/nginx.conf
@@ -3,10 +3,10 @@ server {
     listen 443 ssl;
     server_name 172.18.0.5;
 
-    ssl_certificate /etc/nginx/conf.d/ssl-cert-snakeoil.pem;
-    ssl_certificate_key /etc/nginx/conf.d/ssl-cert-snakeoil.key;
-    #ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-    #ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+    ssl_certificate /etc/nginx/conf.d/nginx.pem;
+    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+    #ssl_certificate /etc/ssl/certs/nginx.pem;
+    #ssl_certificate_key /etc/ssl/private/nginx.key;
 
     location / {
         proxy_pass http://172.18.0.4:8000;
