--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Project specific
 aws-config.txt
-webapp/src/cert/rootca_pkey.pem
+stop.sh
+restapi/src/cert/rootca_pkey.pem
 _client_simulator/__pycache__
 _device_simulator/__pycache__
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
