--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - "27017:27017"
     volumes:
       - "mydockervol:/data/db"
-  webapp:
-    build: ./webapp
+  restapi:
+    build: ./restapi
     restart: always
     networks:
       mydockernet:
@@ -39,29 +39,37 @@ services:
       - AWS_COGNITO_CLIENT_ID
       - AWS_COGNITO_USERPOOL_ID
       - AWS_COGNITO_USERPOOL_REGION
-  nginx:
-    build: ./nginx
+  webapp:
+    build: ./webapp
     restart: always
     networks:
       mydockernet:
         ipv4_address: 172.18.0.5
     ports:
+      - "8100:8100"
+    depends_on:
+      - restapi
+  nginx:
+    build: ./nginx
+    restart: always
+    networks:
+      mydockernet:
+        ipv4_address: 172.18.0.6
+    ports:
       - "443:443"
     expose:
       - "443"
     depends_on:
+      - restapi
       - webapp
   notification:
     build: ./notification
     restart: always
     networks:
       mydockernet:
-        ipv4_address: 172.18.0.6
+        ipv4_address: 172.18.0.7
     depends_on:
-      - rabbitmq
       - nginx
-      - webapp
-      - mongodb
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
