--- a/nginx/src/nginx.conf
+++ b/nginx/src/nginx.conf
@@ -1,14 +1,21 @@
 server {
-    #listen 80;
     listen 443 ssl;
-    server_name 172.18.0.5;
+    server_name 172.18.0.6;
 
-    ssl_certificate /etc/nginx/conf.d/nginx.pem;
-    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-    #ssl_certificate /etc/ssl/certs/nginx.pem;
-    #ssl_certificate_key /etc/ssl/private/nginx.key;
+    ssl_certificate /etc/nginx/conf.d/ssl-cert-snakeoil.pem;
+    ssl_certificate_key /etc/nginx/conf.d/ssl-cert-snakeoil.key;
+    #ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+    #ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+
+    location /user {
+        proxy_pass http://172.18.0.4:8000; # REST-API access for mobile apps
+    }
+
+    location /devices {
+        proxy_pass http://172.18.0.4:8000; # REST-API access for mobile apps
+    }
 
     location / {
-        proxy_pass http://172.18.0.4:8000;
+        proxy_pass http://172.18.0.5:8100; # Web app
     }
 }
