Added error handling

--- a/nginx/src/nginx.conf
+++ b/nginx/src/nginx.conf
@@ -2,10 +2,8 @@ server {
     listen 443 ssl;
     server_name 172.18.0.6;
 
-    ssl_certificate /etc/nginx/conf.d/ssl-cert-snakeoil.pem;
-    ssl_certificate_key /etc/nginx/conf.d/ssl-cert-snakeoil.key;
-    #ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-    #ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+    ssl_certificate /etc/nginx/conf.d/cert.pem;
+    ssl_certificate_key /etc/nginx/conf.d/pkey.pem;
 
     location /user {
         proxy_pass http://172.18.0.4:8000; # REST-API access for mobile apps
