--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ stop.sh
 restapi/src/cert/rootca_pkey.pem
 _client_simulator/__pycache__
 _device_simulator/__pycache__
-
+_requirements
+_presentation
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
