Use ECC config as default configuration

--- a/rabbitmq/src/rabbitmq_rsa.config
+++ b/rabbitmq/src/rabbitmq_rsa.config
@@ -66,16 +66,16 @@
    %%
    %% Related doc guide: https://www.rabbitmq.com/ssl.html.
    %%
-   {ssl_options, [{cacertfile,           "/etc/rabbitmq/cert_ecc/rootca.pem"},
-                  {certfile,             "/etc/rabbitmq/cert_ecc/server_cert.pem"},
-                  {keyfile,              "/etc/rabbitmq/cert_ecc/server_pkey.pem"},
-%%   {ssl_options, [{cacertfile,           "/etc/rabbitmq/cert/rootca.pem"},
-%%                  {certfile,             "/etc/rabbitmq/cert/server_cert.pem"},
-%%                  {keyfile,              "/etc/rabbitmq/cert/server_pkey.pem"},
+%%   {ssl_options, [{cacertfile,           "/etc/rabbitmq/cert_ecc/rootca.pem"},
+%%                  {certfile,             "/etc/rabbitmq/cert_ecc/server_cert.pem"},
+%%                  {keyfile,              "/etc/rabbitmq/cert_ecc/server_pkey.pem"},
+   {ssl_options, [{cacertfile,           "/etc/rabbitmq/cert/rootca.pem"},
+                  {certfile,             "/etc/rabbitmq/cert/server_cert.pem"},
+                  {keyfile,              "/etc/rabbitmq/cert/server_pkey.pem"},
                   {verify,               verify_peer},
                   {fail_if_no_peer_cert, false},
-                  {ciphers,              ["ECDHE-ECDSA-AES128-SHA256", "ECDHE-ECDSA-AES128-GCM-SHA256"]} 
-%%                  {ciphers,              ["RSA-AES128-SHA", "RSA-AES256-SHA"]}
+%%                  {ciphers,              ["ECDHE-ECDSA-AES128-SHA256", "ECDHE-ECDSA-AES128-GCM-SHA256"]} 
+                  {ciphers,  ["RSA-AES128-SHA", "RSA-AES256-SHA"]} 
    ]}
    %% Choose the available SASL mechanism(s) to expose.
    %% The two default (built in) mechanisms are 'PLAIN' and
