--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Project specific
-aws-config.txt
-aws-config-old.txt
+aws-config.sh
+aws-config-old.sh
 stop.sh
 restapi/src/cert/rootca_pkey.pem
 _client_simulator/__pycache__
