--- a/nginx/src/nginx.conf
+++ b/nginx/src/nginx.conf
@@ -2,8 +2,16 @@ server {
     listen 443 ssl;
     server_name 172.18.0.6;
 
-    ssl_certificate /etc/nginx/conf.d/cert.pem;
-    ssl_certificate_key /etc/nginx/conf.d/pkey.pem;
+    # For development testing
+    ssl_certificate /etc/nginx/conf.d/cert_test/cert.pem;
+    ssl_certificate_key /etc/nginx/conf.d/cert_test/pkey.pem;
+
+    # For production
+    # cert_prod folder must contain the production certificates
+    # bought from GoDaddy.com or somewhere else
+    # The certificate is usually tied up with the domain name hosting
+#    ssl_certificate /etc/nginx/conf.d/cert_prod/cert.pem;
+#    ssl_certificate_key /etc/nginx/conf.d/cert_prod/pkey.pem;
 
     location /user {
         proxy_pass http://172.18.0.4:8000; # REST-API access for mobile apps
