--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ nginx/src/cert_prod/cert.pem
 nginx/src/cert_prod/pkey.pem
 aws-config.sh
 aws-config-old.sh
-stop.sh
 restapi/src/cert/rootca_pkey.pem
+restapi/src/cert_ecc/rootca_pkey.pem
 _client_simulator/__pycache__
 _device_simulator/__pycache__
 _requirements
