Default as production
Notes for dev testing:
1. Update webapp\src\ionicapp\www\js\server.js - use 192.168.99.100 instead of richmondu.com
2. Update nginx\src\nginx.conf - use cert_test folder instead of cert_prod

--- a/nginx/src/nginx.conf
+++ b/nginx/src/nginx.conf
@@ -3,15 +3,15 @@ server {
     server_name 172.18.0.6;
 
     # For development testing
-    ssl_certificate /etc/nginx/conf.d/cert_test/cert.pem;
-    ssl_certificate_key /etc/nginx/conf.d/cert_test/pkey.pem;
+#    ssl_certificate /etc/nginx/conf.d/cert_test/cert.pem;
+#    ssl_certificate_key /etc/nginx/conf.d/cert_test/pkey.pem;
 
     # For production
     # cert_prod folder must contain the production certificates
     # bought from GoDaddy.com or somewhere else
     # The certificate is usually tied up with the domain name hosting
-#    ssl_certificate /etc/nginx/conf.d/cert_prod/cert.pem;
-#    ssl_certificate_key /etc/nginx/conf.d/cert_prod/pkey.pem;
+    ssl_certificate /etc/nginx/conf.d/cert_prod/cert.pem;
+    ssl_certificate_key /etc/nginx/conf.d/cert_prod/pkey.pem;
 
     location /user {
         proxy_pass http://172.18.0.4:8000; # REST-API access for mobile apps
