Optimize docker files

--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -1,7 +1,6 @@
 FROM rabbitmq:3.7
 
-RUN rabbitmq-plugins enable --offline rabbitmq_management
-RUN rabbitmq-plugins enable --offline rabbitmq_mqtt
+RUN rabbitmq-plugins enable --offline rabbitmq_management && rabbitmq-plugins enable --offline rabbitmq_mqtt
 
 COPY src/ /etc/rabbitmq/
 
