--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ _client_simulator/__pycache__
 _device_simulator/__pycache__
 _requirements
 _presentation
+*.yaml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
