Revert "Replace fixed docker IP with docker hostname"
This reverts commit 674985129fae888309880230691bf8bbfe74ce5e.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     build: ./rabbitmq
     restart: always
     networks:
-      - mydockernet
+      mydockernet:
+        ipv4_address: 172.18.0.2
     ports:
       - "8883:8883"
       - "5671:5671"
@@ -17,7 +18,8 @@ services:
     build: ./mongodb
     restart: always
     networks:
-      - mydockernet
+      mydockernet:
+        ipv4_address: 172.18.0.3
     ports:
       - "27017:27017"
     volumes:
@@ -26,7 +28,8 @@ services:
     build: ./restapi
     restart: always
     networks:
-      - mydockernet
+      mydockernet:
+        ipv4_address: 172.18.0.4
     ports:
       - "8000:8000"
     depends_on:
@@ -43,7 +46,8 @@ services:
     build: ./webapp
     restart: always
     networks:
-      - mydockernet
+      mydockernet:
+        ipv4_address: 172.18.0.5
     ports:
       - "8100:8100"
     depends_on:
@@ -52,7 +56,8 @@ services:
     build: ./nginx
     restart: always
     networks:
-      - mydockernet
+      mydockernet:
+        ipv4_address: 172.18.0.6
     ports:
       - "443:443"
     expose:
@@ -64,7 +69,8 @@ services:
     build: ./notification
     restart: always
     networks:
-      - mydockernet
+      mydockernet:
+        ipv4_address: 172.18.0.7
     depends_on:
       - nginx
     environment:
@@ -78,7 +84,8 @@ services:
     build: ./history
     restart: always
     networks:
-      - mydockernet
+      mydockernet:
+        ipv4_address: 172.18.0.8
     depends_on:
       - rabbitmq
       - mongodb
