--- a/nginx/src/nginx.conf
+++ b/nginx/src/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-#    server_name 172.18.0.6;
+    server_name 172.18.0.6;
 
     # For development testing
     ssl_certificate /etc/nginx/conf.d/cert_test/cert.pem;
@@ -14,17 +14,14 @@ server {
 #    ssl_certificate_key /etc/nginx/conf.d/cert_prod/pkey.pem;
 
     location /user {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
+        proxy_pass http://172.18.0.4:8000; # REST-API access for mobile apps
     }
 
     location /devices {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
+        proxy_pass http://172.18.0.4:8000; # REST-API access for mobile apps
     }
 
     location / {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://webapp:8100; # Web app
+        proxy_pass http://172.18.0.5:8100; # Web app
     }
 }
