--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,8 @@ services:
       mydockernet:
         ipv4_address: 172.18.0.7
     depends_on:
-      - nginx
+      - rabbitmq
+      - mongodb
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
