Replace fixed docker IP with docker hostname

--- a/notification/Dockerfile
+++ b/notification/Dockerfile
@@ -6,4 +6,4 @@ COPY src/ /usr/src/app/notification_manager/
 WORKDIR /usr/src/app/notification_manager/notification_manager
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "-u", "notification_manager.py", "--USE_HOST", "172.18.0.2"]
+CMD ["python", "-u", "notification_manager.py", "--USE_HOST", "rabbitmq"]
