--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ aws-config-old.sh
 _client_simulator/__pycache__
 _device_simulator/__pycache__
 _device_simulator/node_modules
+_device_simulator/package-lock.json
 _requirements
 _presentation
 
