--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,13 @@ services:
       - AWS_PINPOINT_REGION
       - AWS_PINPOINT_EMAIL
       - CONFIG_USE_ECC
+      - TWILIO_ACCOUNT_SID
+      - TWILIO_AUTH_TOKEN
+      - TWILIO_NUMBER_FROM
+      - NEXMO_KEY
+      - NEXMO_SECRET
+      - CONFIG_USE_EMAIL_MODEL
+      - CONFIG_USE_SMS_MODEL
   history:
     build: ./history
     restart: always
