--- a/_jenkins/server/docker-compose.yml
+++ b/_jenkins/server/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - AWS_PINPOINT_REGION
       - AWS_PINPOINT_EMAIL
       - CONFIG_USE_ECC
+      - PAYPAL_CLIENT_ID
+      - PAYPAL_CLIENT_SECRET
       - TWILIO_ACCOUNT_SID
       - TWILIO_AUTH_TOKEN
       - TWILIO_NUMBER_FROM
