--- a/_jenkins/server/docker-compose.yml
+++ b/_jenkins/server/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - NEXMO_SECRET
       - CONFIG_USE_EMAIL_MODEL
       - CONFIG_USE_SMS_MODEL
+      - CONFIG_USE_CERTS
     volumes:
       - "myjenkinsvol:/var/jenkins_home"
       - "/var/run/docker.sock:/var/run/docker.sock"
