--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,9 @@
 FROM nginx:latest
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY src/ /etc/nginx/conf.d/
+
+ARG config_use_certs
+COPY $config_use_certs /etc/nginx/conf.d/
 
 EXPOSE 443
 
