--- a/_jenkins/server/docker-compose.yml
+++ b/_jenkins/server/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - CONFIG_USE_EMAIL_MODEL
       - CONFIG_USE_SMS_MODEL
       - CONFIG_USE_CERTS
+      - CONFIG_USE_APIURL
     volumes:
       - "myjenkinsvol:/var/jenkins_home"
       - "/var/run/docker.sock:/var/run/docker.sock"
