--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /usr/src/app/ionicapp
 COPY src/ionicapp/ /usr/src/app/ionicapp/
 
 ARG config_use_apiurl
-RUN cat /usr/src/app/ionicapp/www/js/env.js | sed -e 's/'localhost'/'$config_use_apiurl'/' > /usr/src/app/ionicapp/www/js/env.js
+RUN cat /usr/src/app/ionicapp/www/js/env.js | sed -i -r "s/'localhost'/'$config_use_apiurl'/" /usr/src/app/ionicapp/www/js/env.js
 
 RUN npm install -D -E @ionic/v1-toolkit && npm rebuild node-sass
 CMD ["ionic", "serve", "--address=0.0.0.0", "--port=8100", "--no-open", "--no-livereload"]
