Updated to reflect new environment variables

--- a/_kubernetes/environment.yaml
+++ b/_kubernetes/environment.yaml
@@ -15,4 +15,13 @@ data:
   CONFIG_USE_ECC: 
   PAYPAL_CLIENT_ID: 
   PAYPAL_CLIENT_SECRET: 
-  
+  TWILIO_ACCOUNT_SID: 
+  TWILIO_AUTH_TOKEN: 
+  TWILIO_NUMBER_FROM: 
+  NEXMO_KEY: 
+  NEXMO_SECRET: 
+  CONFIG_USE_EMAIL_MODEL: 
+  CONFIG_USE_SMS_MODEL: 
+  CONFIG_USE_CERTS: 
+  CONFIG_USE_APIURL: 
+ 
