--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ _device_simulator/node_modules
 _device_simulator/package-lock.json
 _device_simulator/obsoleted_rsa
 _device_simulator/device_simulator.py_amqp.bat
-_kubernetes/environment.yaml
+_kubernetes/environment_private.yaml
 _requirements
 _presentation
 
