--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ _device_simulator/package-lock.json
 _device_simulator/obsoleted_rsa
 _device_simulator/device_simulator.py_amqp.bat
 _kubernetes/environment_private.yaml
+_kubernetes/notes.txt
 _requirements
 _presentation
 
