Remove outdate client_simulator

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ nginx/src_prod/cert/cert.pem
 nginx/src_prod/cert/pkey.pem
 aws-config.sh
 aws-config-old.sh
-_client_simulator/__pycache__
 _device_simulator/__pycache__
 _device_simulator/node_modules
 _device_simulator/package-lock.json
@@ -17,6 +16,8 @@ _requirements
 _presentation
 start.sh
 stop.sh
+_client_simulator
+_client_simulator/__pycache__
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
