--- a/nginx/src_prod/nginx.conf
+++ b/nginx/src_prod/nginx.conf
@@ -9,6 +9,11 @@ server {
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
     }
 
+    location /account {
+        resolver 127.0.0.11 ipv6=off;
+        proxy_pass http://restapi:8000; # REST-API access for mobile apps
+    }
+
     location /devices {
         resolver 127.0.0.11 ipv6=off;
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
