--- a/rabbitmq/src/rabbitmq.config
+++ b/rabbitmq/src/rabbitmq.config
@@ -73,7 +73,7 @@
 %%                  {certfile,             "/etc/rabbitmq/cert/server_cert.pem"},
 %%                  {keyfile,              "/etc/rabbitmq/cert/server_pkey.pem"},
                   {verify,               verify_peer},
-                  {fail_if_no_peer_cert, false},
+                  {fail_if_no_peer_cert, true},
                   {ciphers,              ["ECDHE-ECDSA-AES128-SHA256", "ECDHE-ECDSA-AES128-GCM-SHA256"]} 
 %%                  {ciphers,              ["RSA-AES128-SHA", "RSA-AES256-SHA"]}
    ]}
