Retest RabbitMQ set configuration

--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -7,3 +7,9 @@ COPY src/ /etc/rabbitmq/
 EXPOSE 15672
 EXPOSE 5671
 EXPOSE 8883
+
+RUN rabbitmq-server start
+RUN rabbitmqctl add_user admin admin 
+RUN rabbitmqctl set_user_tags admin administrator 
+RUN rabbitmqctl set_permissions -p / admin ".*" ".*" ".*" 
+RUN rabbitmqctl set_topic_permissions -p / admin amq.topic "^$" "^$"
