--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -4,12 +4,9 @@ RUN rabbitmq-plugins enable --offline rabbitmq_management && rabbitmq-plugins en
 
 COPY src/ /etc/rabbitmq/
 
+ADD init.sh /init.sh
 EXPOSE 15672
+CMD ["/init.sh"]
+
 EXPOSE 5671
 EXPOSE 8883
-
-RUN rabbitmq-server start
-RUN rabbitmqctl add_user admin admin 
-RUN rabbitmqctl set_user_tags admin administrator 
-RUN rabbitmqctl set_permissions -p / admin ".*" ".*" ".*" 
-RUN rabbitmqctl set_topic_permissions -p / admin amq.topic "^$" "^$"
