--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ _device_simulator/node_modules
 _device_simulator/package-lock.json
 _device_simulator/obsoleted_rsa
 _device_simulator/device_simulator.py_amqp.bat
+_device_simulator/device_simulator.js_guest.bat
+_device_simulator/device_simulator.py_guest.bat
 _kubernetes/environment_private.yaml
 _kubernetes/environment_private_prod.yaml
 _kubernetes/notes.txt
