Disallow anonymous credentials

--- a/rabbitmq/src/rabbitmq.config
+++ b/rabbitmq/src/rabbitmq.config
@@ -713,7 +713,7 @@
    %% login information in order to connect. See the default_user/default_pass
    %% configuration elements for managing logins without authentication.
    %%
-   {allow_anonymous, true},
+   {allow_anonymous, false},
 
    %% If you have multiple chosts, specify the one to which the
    %% adapter connects.
