--- a/_jenkins/server/docker-compose.yml
+++ b/_jenkins/server/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - CONFIG_USE_SMS_MODEL
       - CONFIG_USE_CERTS
       - CONFIG_USE_APIURL
+      - CONFIG_USE_MQTT_DEFAULT_USER
+      - CONFIG_USE_MQTT_DEFAULT_PASS
     volumes:
       - "myjenkinsvol:/var/jenkins_home"
       - "/var/run/docker.sock:/var/run/docker.sock"
