--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
       - CONFIG_USE_ECC
       - PAYPAL_CLIENT_ID
       - PAYPAL_CLIENT_SECRET
+      - CONFIG_USE_MQTT_DEFAULT_USER
+      - CONFIG_USE_MQTT_DEFAULT_PASS
   webapp:
     build: 
       context: ./webapp
@@ -94,6 +96,8 @@ services:
       - NEXMO_SECRET
       - CONFIG_USE_EMAIL_MODEL
       - CONFIG_USE_SMS_MODEL
+      - CONFIG_USE_MQTT_DEFAULT_USER
+      - CONFIG_USE_MQTT_DEFAULT_PASS
   history:
     build: ./history
     restart: always
@@ -104,6 +108,8 @@ services:
       - mongodb
     environment:
       - CONFIG_USE_ECC
+      - CONFIG_USE_MQTT_DEFAULT_USER
+      - CONFIG_USE_MQTT_DEFAULT_PASS
 networks:
   mydockernet:
     driver: bridge
