--- a/_jenkins/server/docker-compose.yml
+++ b/_jenkins/server/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - CONFIG_USE_APIURL
       - CONFIG_USE_MQTT_DEFAULT_USER
       - CONFIG_USE_MQTT_DEFAULT_PASS
+      - CONFIG_USE_JWT_SECRET_KEY
     volumes:
       - "myjenkinsvol:/var/jenkins_home"
       - "/var/run/docker.sock:/var/run/docker.sock"
