--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,11 +44,13 @@ services:
       - PAYPAL_CLIENT_SECRET
       - CONFIG_USE_MQTT_DEFAULT_USER
       - CONFIG_USE_MQTT_DEFAULT_PASS
+      - CONFIG_JWT_SECRET_KEY
   webapp:
     build: 
       context: ./webapp
       args:
         config_use_apiurl: ${CONFIG_USE_APIURL}
+        config_use_jwtkey: ${CONFIG_JWT_SECRET_KEY}
     restart: always
     networks:
       - mydockernet
@@ -58,6 +60,7 @@ services:
       - restapi
     environment:
       - CONFIG_USE_APIURL
+      - CONFIG_JWT_SECRET_KEY
   nginx:
     build: 
       context: ./nginx
