--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -7,6 +7,9 @@ COPY src/ionicapp/ /usr/src/app/ionicapp/
 ARG config_use_apiurl
 RUN cat /usr/src/app/ionicapp/www/js/env.js | sed -i 's/localhost/'$config_use_apiurl'/' /usr/src/app/ionicapp/www/js/env.js
 
+ARG config_use_jwtkey
+RUN cat /usr/src/app/ionicapp/www/js/env.js | sed -i 's/secretkey/'$config_use_jwtkey'/' /usr/src/app/ionicapp/www/js/env.js
+
 RUN npm install -D -E @ionic/v1-toolkit && npm rebuild node-sass
 RUN cat /usr/src/app/ionicapp/www/js/env.js
 CMD ["ionic", "serve", "--address=0.0.0.0", "--port=8100", "--no-open", "--no-livereload"]
