Convert JWT secret key to environment variable

--- a/_kubernetes/environment.yaml
+++ b/_kubernetes/environment.yaml
@@ -24,4 +24,6 @@ data:
   CONFIG_USE_SMS_MODEL: 
   CONFIG_USE_CERTS: 
   CONFIG_USE_APIURL: 
- 
+  CONFIG_USE_MQTT_DEFAULT_USER: 
+  CONFIG_USE_MQTT_DEFAULT_PASS: 
+  CONFIG_USE_JWT_SECRET_KEY: 
