--- a/_kubernetes/iothistory-deployment.yaml
+++ b/_kubernetes/iothistory-deployment.yaml
@@ -23,3 +23,13 @@ spec:
               secretKeyRef:
                 name: environment
                 key: CONFIG_USE_ECC
+          - name: CONFIG_USE_MQTT_DEFAULT_USER
+            valueFrom:
+              secretKeyRef:
+                name: environment
+                key: CONFIG_USE_MQTT_DEFAULT_USER
+          - name: CONFIG_USE_MQTT_DEFAULT_PASS
+            valueFrom:
+              secretKeyRef:
+                name: environment
+                key: CONFIG_USE_MQTT_DEFAULT_PASS
