--- a/_kubernetes/iotnotification-deployment.yaml
+++ b/_kubernetes/iotnotification-deployment.yaml
@@ -83,3 +83,13 @@ spec:
               secretKeyRef:
                 name: environment
                 key: CONFIG_USE_SMS_MODEL
+          - name: CONFIG_USE_MQTT_DEFAULT_USER
+            valueFrom:
+              secretKeyRef:
+                name: environment
+                key: CONFIG_USE_MQTT_DEFAULT_USER
+          - name: CONFIG_USE_MQTT_DEFAULT_PASS
+            valueFrom:
+              secretKeyRef:
+                name: environment
+                key: CONFIG_USE_MQTT_DEFAULT_PASS
