--- a/_kubernetes/iotrestapi-deployment.yaml
+++ b/_kubernetes/iotrestapi-deployment.yaml
@@ -60,3 +60,18 @@ spec:
               secretKeyRef:
                 name: environment
                 key: PAYPAL_CLIENT_SECRET
+          - name: CONFIG_USE_MQTT_DEFAULT_USER
+            valueFrom:
+              secretKeyRef:
+                name: environment
+                key: CONFIG_USE_MQTT_DEFAULT_USER
+          - name: CONFIG_USE_MQTT_DEFAULT_PASS
+            valueFrom:
+              secretKeyRef:
+                name: environment
+                key: CONFIG_USE_MQTT_DEFAULT_PASS
+          - name: CONFIG_USE_JWT_SECRET_KEY
+            valueFrom:
+              secretKeyRef:
+                name: environment
+                key: CONFIG_USE_JWT_SECRET_KEY
