--- a/_kubernetes/iotrabbitmq-deployment.yaml
+++ b/_kubernetes/iotrabbitmq-deployment.yaml
@@ -14,16 +14,23 @@ spec:
       labels:
         app: iotrabbitmq
     spec:
+      volumes:
+        - name: rabbitmq-data
+          persistentVolumeClaim:
+            claimName: rabbitmq-data
       containers:
         - name: iotrabbitmq
           image: richmondu/iotrabbitmq
           ports:
           - containerPort: 8883
-          - containerPort: 5671
+          - containerPort: 15672
+          volumeMounts:
+          - mountPath: /var/lib/rabbitmq
+            name: rabbitmq-data
           env:
           - name: CONFIG_USE_ECC
             valueFrom:
               secretKeyRef:
                 name: environment
-                key: CONFIG_USE_ECC          
+                key: CONFIG_USE_ECC
 
