--- a/_kubernetes/iotrabbitmq-persistentvolumeclaim.yaml
+++ b/_kubernetes/iotrabbitmq-persistentvolumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongodb-data
+  name: rabbitmq-data
 spec:
   accessModes:
   - ReadWriteOnce
