--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,9 @@ services:
       - CONFIG_USE_MQTT_DEFAULT_USER
       - CONFIG_USE_MQTT_DEFAULT_PASS
       - CONFIG_USE_JWT_SECRET_KEY
+      - AWS_S3_REGION
+      - AWS_S3_BUCKET
+      - AWS_S3_FILE_I2C_DEVICES
   webapp:
     build: 
       context: ./webapp
