Updated to add new environment variables

--- a/_kubernetes/environment.yaml
+++ b/_kubernetes/environment.yaml
@@ -27,3 +27,5 @@ data:
   CONFIG_USE_MQTT_DEFAULT_USER: 
   CONFIG_USE_MQTT_DEFAULT_PASS: 
   CONFIG_USE_JWT_SECRET_KEY: 
+  AWS_S3_FILE_I2C_DEVICES: 
+  AWS_S3_FILE_SENSOR_DEVICES: 
