--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /usr/src/app/libpyiotcloud
 COPY src/ /usr/src/app/libpyiotcloud/
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["gunicorn", "--workers=1", "--bind=0.0.0.0:8000", "--forwarded-allow-ips='*'", "wsgi:app"]
+CMD ["gunicorn", "--workers=2", "--timeout=120", "--bind=0.0.0.0:8000", "--forwarded-allow-ips='*'", "wsgi:app"]
 
 EXPOSE 8000
 
