Updated Nginx configuration for new /mobile keyword

--- a/nginx/src_prod/nginx.conf
+++ b/nginx/src_prod/nginx.conf
@@ -19,6 +19,11 @@ server {
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
     }
 
+    location /mobile {
+        resolver 127.0.0.11 ipv6=off;
+        proxy_pass http://restapi:8000; # REST-API access for mobile apps
+    }
+
     location /others {
         resolver 127.0.0.11 ipv6=off;
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
