--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 version: '3.0'
 services:
   rabbitmq:
-    build: ./rabbitmq
+    build: 
+      context: ./rabbitmq
+      args:
+        config_use_defaultuser: ${CONFIG_USE_MQTT_DEFAULT_USER}
+        config_use_defaultpass: ${CONFIG_USE_MQTT_DEFAULT_PASS}
     restart: always
     networks:
       - mydockernet
