--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -4,7 +4,10 @@ RUN rabbitmq-plugins enable --offline rabbitmq_management && rabbitmq-plugins en
 
 ARG config_use_defaultuser
 ARG config_use_defaultpass
-RUN rabbitmqctl add_user '$config_use_defaultuser' '$config_use_defaultpass' && rabbitmqctl set_permissions -p / '$config_use_defaultuser' ".*" ".*" ".*" && rabbitmqctl set_user_tags '$config_use_defaultuser' administrator && rabbitmqctl set_topic_permissions -p / '$config_use_defaultuser' amq.topic ".*" ".*"
+RUN rabbitmqctl add_user '$config_use_defaultuser' '$config_use_defaultpass' 
+RUN rabbitmqctl set_permissions -p / '$config_use_defaultuser' ".*" ".*" ".*" 
+RUN rabbitmqctl set_user_tags '$config_use_defaultuser' administrator 
+RUN rabbitmqctl set_topic_permissions -p / '$config_use_defaultuser' amq.topic ".*" ".*"
 
 COPY src/ /etc/rabbitmq/
 
