--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,7 @@
 version: '3.0'
 services:
   rabbitmq:
-    build: 
-      context: ./rabbitmq
-      args:
-        config_use_defaultuser: ${CONFIG_USE_MQTT_DEFAULT_USER}
-        config_use_defaultpass: ${CONFIG_USE_MQTT_DEFAULT_PASS}
+    build: ./rabbitmq
     restart: always
     networks:
       - mydockernet
