Make Google Api key an environment variable

--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -10,6 +10,9 @@ RUN cat /usr/src/app/ionicapp/www/js/env.js | sed -i 's/localhost/'$config_use_a
 ARG config_use_jwtkey
 RUN cat /usr/src/app/ionicapp/www/js/env.js | sed -i 's/secretkey/'$config_use_jwtkey'/' /usr/src/app/ionicapp/www/js/env.js
 
+ARG config_use_googleapikey
+RUN cat /usr/src/app/ionicapp/www/js/env.js | sed -i 's/googleapikey/'$config_use_googleapikey'/' /usr/src/app/ionicapp/www/js/env.js
+
 RUN npm install -D -E @ionic/v1-toolkit && npm rebuild node-sass
 RUN cat /usr/src/app/ionicapp/www/js/env.js
 CMD ["ionic", "serve", "--address=0.0.0.0", "--port=8100", "--no-open", "--no-livereload"]
