--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       args:
         config_use_apiurl: ${CONFIG_USE_APIURL}
         config_use_jwtkey: ${CONFIG_USE_JWT_SECRET_KEY}
+        config_use_googleapikey: ${GOOGLE_API_KEY}
     restart: always
     networks:
       - mydockernet
@@ -66,6 +67,7 @@ services:
     environment:
       - CONFIG_USE_APIURL
       - CONFIG_USE_JWT_SECRET_KEY
+      - GOOGLE_API_KEY
   nginx:
     build: 
       context: ./nginx
