--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       - AWS_S3_BUCKET
       - AWS_S3_FILE_I2C_DEVICES
       - AWS_S3_FILE_SENSOR_DEVICES
+      - AWS_S3_FILE_FIRMWARE_UPDATES
   webapp:
     build: 
       context: ./webapp
