--- a/nginx/src_test/nginx.conf
+++ b/nginx/src_test/nginx.conf
@@ -29,6 +29,11 @@ server {
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
     }
 
+    location /firmware {
+        resolver 127.0.0.11 ipv6=off;
+        proxy_pass http://restapi:8000; # REST-API access for mobile apps
+    }
+
     location / {
         resolver 127.0.0.11 ipv6=off;
         proxy_pass http://webapp:8100; # Web app
