--- a/nginx/src_prod/nginx.conf
+++ b/nginx/src_prod/nginx.conf
@@ -35,6 +35,7 @@ server {
     }
 
     location / {
+        add_header Access-Control-Allow-Origin *;
         resolver 127.0.0.11 ipv6=off;
         proxy_pass http://webapp:8100; # Web app
     }
