--- a/nginx/src_prod/nginx.conf
+++ b/nginx/src_prod/nginx.conf
@@ -36,6 +36,9 @@ server {
 
     location / {
         add_header Access-Control-Allow-Origin *;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
         resolver 127.0.0.11 ipv6=off;
         proxy_pass http://webapp:8100; # Web app
     }
