--- a/nginx/src_prod/nginx.conf
+++ b/nginx/src_prod/nginx.conf
@@ -34,6 +34,11 @@ server {
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
     }
 
+    location /google858a6569305f0b84.html {
+        rewrite ^/(.*)  $1;
+        return 200 "google-site-verification: $uri";
+    }
+
     location / {
         add_header Access-Control-Allow-Origin *;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
