--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ stop.sh
 _client_simulator
 _client_simulator/__pycache__
 restapi/src/redis-2.4.5-win32-win64
+webapp/src/ionicapp/www/js/env.js
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
