--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ _client_simulator
 _client_simulator/__pycache__
 restapi/src/redis-2.4.5-win32-win64
 webapp/src/ionicapp/www/js/env.js
+ota/src/ota_manager/*.bin
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
