--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,6 +151,25 @@ services:
       - CONFIG_USE_ECC
       - CONFIG_USE_MQTT_DEFAULT_USER
       - CONFIG_USE_MQTT_DEFAULT_PASS
+  ota:
+    build: ./ota
+    restart: always
+    networks:
+      - mydockernet
+    depends_on:
+      - rabbitmq
+      - mongodb
+    environment:
+      - CONFIG_USE_ECC
+      - CONFIG_USE_MQTT_DEFAULT_USER
+      - CONFIG_USE_MQTT_DEFAULT_PASS
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_S3_REGION
+      - AWS_S3_BUCKET
+      - AWS_S3_FILE_I2C_DEVICES
+      - AWS_S3_FILE_SENSOR_DEVICES
+      - AWS_S3_FILE_FIRMWARE_UPDATES
 networks:
   mydockernet:
     driver: bridge
