--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ _device_simulator/localhost/*.cfg
 _device_simulator/*.cfg
 _device_simulator/*.bat
 _device_simulator/*.bin
+_device_simulator/*.ver
 _kubernetes/environment_private.yaml
 _kubernetes/environment_private_prod.yaml
 _kubernetes/notes.txt
