--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,8 @@ services:
       - CONFIG_USE_SMS_MODEL
       - CONFIG_USE_MQTT_DEFAULT_USER
       - CONFIG_USE_MQTT_DEFAULT_PASS
+      - AWS_S3_REGION
+      - AWS_S3_BUCKET
   history:
     build: ./history
     restart: always
