--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,15 @@ services:
       - "27017:27017"
     volumes:
       - "mongodb-data:/data/db"
+  redis:
+    build: ./redis
+    restart: always
+    networks:
+      - mydockernet
+    ports:
+      - "6379:6379"
+    volumes:
+      - "redis-data:/data/db"
   restapi:
     build: ./restapi
     restart: always
@@ -34,6 +43,7 @@ services:
     depends_on:
       - rabbitmq
       - mongodb
+      - redis
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
