--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
       - AWS_COGNITO_OAUTH_DOMAIN
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+      - CONFIG_USE_MONGODB_ATLAS
   webapp:
     build: 
       context: ./webapp
@@ -159,6 +160,7 @@ services:
       - CONFIG_USE_MQTT_DEFAULT_PASS
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+      - CONFIG_USE_MONGODB_ATLAS
   configuration:
     build: ./configuration
     restart: always
