--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
       - AWS_COGNITO_USERPOOL_ID
       - AWS_COGNITO_USERPOOL_REGION
       - CONFIG_USE_ECC
+      - PAYPAL_MODE
       - PAYPAL_CLIENT_ID
       - PAYPAL_CLIENT_SECRET
       - CONFIG_USE_MQTT_DEFAULT_USER
