--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -199,6 +199,20 @@ services:
       - CONFIG_USE_MQTT_DEFAULT_PASS
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+  registration:
+    build: ./registration
+    restart: always
+    networks:
+      - mydockernet
+    depends_on:
+      - rabbitmq
+      - mongodb
+    environment:
+      - CONFIG_USE_ECC
+      - CONFIG_USE_MQTT_DEFAULT_USER
+      - CONFIG_USE_MQTT_DEFAULT_PASS
+      - CONFIG_USE_MONGODB_USER
+      - CONFIG_USE_MONGODB_PASS
   ota:
     build: ./ota
     restart: always
