--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ _device_simulator/*.bat
 _device_simulator/*.bin
 _device_simulator/*.ver
 _device_simulator/*.sns
+_device_simulator/*.txt
+_device_simulator/*.log
 _kubernetes/environment_private.yaml
 _kubernetes/environment_private_prod.yaml
 _kubernetes/notes.txt
