--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       - CONFIG_USE_MQTT_DEFAULT_USER
       - CONFIG_USE_MQTT_DEFAULT_PASS
       - CONFIG_USE_JWT_SECRET_KEY
+      - CONFIG_USE_JWT_SECRET_KEY_DEVICE
       - AWS_S3_REGION
       - AWS_S3_BUCKET
       - AWS_S3_FILE_I2C_DEVICES
