--- a/_prometheus_grafana/prometheus/prometheus.yml
+++ b/_prometheus_grafana/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 global:
-  scrape_interval:     15s
-  evaluation_interval: 15s
+  scrape_interval:     30s
+  evaluation_interval: 30s
 
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
@@ -14,25 +14,25 @@ global:
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
   - job_name: 'nodeexporter'
-    scrape_interval: 5s
+    scrape_interval: 10s
     static_configs:
-      - targets: ['nodeexporter:9100']
+      - targets: ['nodeexporter:9100', 'cadvisor:8090']
 
   - job_name: 'cadvisor'
-    scrape_interval: 5s
+    scrape_interval: 10s
     static_configs:
       - targets: ['cadvisor:8090']
 
   - job_name: 'prometheus'
-    scrape_interval: 10s
+    scrape_interval: 20s
     static_configs:
       - targets: ['localhost:9090', 'cadvisor:8090']
 
   - job_name: 'pushgateway'
-    scrape_interval: 10s
+    scrape_interval: 20s
     honor_labels: true
     static_configs:
-      - targets: ['pushgateway:9091']
+      - targets: ['pushgateway:9091', 'cadvisor:8090']
 
 
 #alerting:
