--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,8 @@ services:
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
       - CONFIG_USE_MONGODB_ATLAS
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
   webapp:
     build: 
       context: ./webapp
@@ -134,6 +136,8 @@ services:
       - AWS_S3_BUCKET
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
   invoice:
     build: ./invoice
     restart: always
@@ -158,6 +162,8 @@ services:
       - AWS_COGNITO_USERPOOL_ID
       - AWS_COGNITO_USERPOOL_REGION
       - CONFIG_USE_APIURL
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
   history:
     build: ./history
     restart: always
@@ -172,6 +178,8 @@ services:
       - CONFIG_USE_MQTT_DEFAULT_PASS
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
   sensor:
     build: ./sensor
     restart: always
@@ -187,6 +195,8 @@ services:
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
       - CONFIG_USE_MONGODB_ATLAS
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
   configuration:
     build: ./configuration
     restart: always
@@ -201,6 +211,8 @@ services:
       - CONFIG_USE_MQTT_DEFAULT_PASS
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
   registration:
     build: ./registration
     restart: always
@@ -215,6 +227,8 @@ services:
       - CONFIG_USE_MQTT_DEFAULT_PASS
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
   ota:
     build: ./ota
     restart: always
@@ -236,6 +250,27 @@ services:
       - AWS_S3_FILE_FIRMWARE_UPDATES
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
+  loki:
+    image: grafana/loki:1.4.1
+    container_name: loki
+    ports:
+      - "3100:3100"
+    expose:
+      - "3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - mydockernet
+  promtail:
+    image: grafana/promtail:1.4.1
+    container_name: promtail
+    volumes:
+      - "promtail-data:/home/ec2-user/promtail"
+      - /var/log:/var/log
+    command: -config.file=/etc/promtail/docker-config.yaml
+    networks:
+      - mydockernet
 networks:
   mydockernet:
     driver: bridge
@@ -245,4 +280,6 @@ volumes:
   mongodb-data:
     driver: local
   redis-data:
+    driver: local
+  promtail-data:
     driver: local
